--- a/public/menu/menu.less
+++ b/public/menu/menu.less
@@ -39,6 +39,12 @@ body {
     background-color: @lightBlack;
     display: inline-block;
 
+    img{
+      padding-left: 10px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      width: 210px;
+    }
   }
 
   #top-right{
